--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@ngx-translate/http-loader": "^6.0.0",
     "bootstrap": "^4.5.0",
     "font-awesome": "^4.7.0",
+    "keycloak-angular": "^8.4.0",
+    "keycloak-js": "^15.0.2",
     "rxjs": "~6.6.0",
     "sweetalert2": "^11.1.7",
     "tslib": "^2.3.0",
